--- a/style.css
+++ b/style.css
@@ -64,4 +64,23 @@ ul li {
 
 ul li.checked {
   color: #4e085f;
+  text-decoration: line-through;
+}
+ul li.checked::before {
+  background-image: url(img/check.png);
+}
+ul li span {
+  position: absolute;
+  right: 0;
+  top: 5px;
+  width: 40px;
+  height: 40px;
+  font-size: 22px;
+  color: #555;
+  line-height: 40px;
+  text-align: center;
+  border-radius: 50%;
+}
+ul li span:hover {
+  background: #edeef0;
 }
